add new user registration form

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -12,5 +12,6 @@
         <label>Google Map URL: <input type="text" name="mapUrl" required></label><br><br>
         <button type="submit">登録</button>
     </form>
+    <a href="/index">お店一覧に戻る</a>
 </body>
 </html>
