--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,7 +11,7 @@
         <label>住所: <input type="text" name="address" required></label><br><br>
         <label>Google Map URL: <input type="text" name="mapUrl" required></label><br><br>
         <button type="submit">登録</button>
+        <button type="button" onclick="location.href='/'">一覧に戻る</button>
     </form>
-    <a href="/index">お店一覧に戻る</a>
 </body>
 </html>
