--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <h1>こんにちは、ShopSiteへようこそ！</h1>
     <h2>登録済みのお店一覧</h2>
     <ul>
-        <li th:each="shop : ${shop}">
+        <li th:each="shop : ${shops}">
             <b th:text="${shop.name}"></b> - 
             <span th:text="${shop.address}"></span> - 
             <a th:href="${shop.mapUrl}" target="_blank">地図</a>
