--- a/src/main/resources/templates/registerResult.html
+++ b/src/main/resources/templates/registerResult.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>登録結果</title>
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+
+    <header class="cute-header">
+    <div class="header-title">ShopSite</div>
+    <nav class="header-nav">
+        <a href="/" class="header-link">ホーム</a>
+        <a href="/register" class="header-link">登録</a>
+    </nav>
+</header>
+
     <h1>登録内容の確認</h1>
     <p>お店の名前: <b th:text="${name}"></b></p>
     <p>住所: <b th:text="${address}"></b></p>
-    <p>Google Map: <a th:href="${mapUrl}" target="_blank">地図を見る</a></p>
+    <p>Google Map: <a th:href="${mapUrl}" target="_blank">地図を開く</a></p>
     <a href="/register">戻る</a>
 </body>
 </html>
